<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/TextContent.Heading1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_text_1" />

                <TextView
                    style="@style/TextContent.Heading1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_text_2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/AllScreen"
                    style="@style/Button"
                    android:text="@string/all"
                    app:icon="@drawable/ic_menu_all" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/PopularScreen"
                    style="@style/Button"
                    android:text="@string/popular"
                    app:icon="@drawable/ic_baseline_hot_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/RecentScreen"
                    style="@style/Button"
                    android:text="@string/recent"
                    app:icon="@drawable/ic_baseline_recent_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/FavoriteScreen"
                    style="@style/Button"
                    android:text="@string/favorite"
                    app:icon="@drawable/ic_baseline_favorite_border_24" />
            </LinearLayout>

            <TextView
                style="@style/TextContent.Heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_list" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/white"
        app:fabCradleMargin="10dp"
        app:fabCradleVerticalOffset="10dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:itemIconTint="@color/orange"
            app:itemTextColor="@color/orange"
            app:menu="@menu/bottom_nav_menu" />
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabScanner"
        style="@style/Widget.Material3.FloatingActionButton.Surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/app_name"
        app:layout_anchor="@id/bottomAppBar"
        app:maxImageSize="32dp"
        app:srcCompat="@drawable/ic_scan"
        app:tint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>